# f1_sim

./: README.md  pyproject.toml  streamlit_app.py
src/: __init__.py  degradation.py  lap_model.py  main.py  montecarlo.py  optimization.py  plotting.py
src/f1_race_strategy_simulator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/f1_sim/: __init__.py  main.py  ml_model.py  montecarlo.py  optimization.py  strategy.py
